--- a/pages/setting.html
+++ b/pages/setting.html
@@ -1,41 +1,31 @@
 <script>
-/*  (async () => {
-    let dbNoUpgrade =await new  noUpgrade( 'setting' );
-    let dbUpgrade =await  new upgrade( 'setting' );
 
-        // @ts-ignore
-    if (! await dbNoUpgrade.isTableExist( 't1' )  )
-    {
-        console.log('create new table 2 this bage ');
-      await  dbUpgrade.createKeyTable( 't1' );
-    }
-    watchingAllInputs2IndexDB( dbNoUpgrade, 't1' );
-})(); */
-//localStorage.getItem(input.id);
 watchAndSaveInputs2Local();
-//restoreInputsFromLocal();
 </script>
-
+<!-- اختيار اللغه -->
 <h2  id="t_266"></h2>
-
 <select id="languageSelect">
   <option value="ar">العربية</option>
   <option value="en">English</option>
 </select>
 <br><br>
-<input type="text" id="hgh1">
+<!-- العلامة العشرية -->
+<h3 id="t_174"></h3>
+<label id="t_602"></label>
+<br><br>
+<input type="number" id="DecimalPoint" min="0" max="5">
 
 
 <script>
-    document.getElementById("languageSelect").addEventListener("change", function () {
-      const selectedLang = this.value;
-      localStorage.setItem("languageSelect", JSON.stringify(selectedLang));
-      location.reload(); // إعادة تحميل الصفحة لتطبيق اللغة الجديدة
+    document.getElementById("languageSelect").addEventListener("change",async function () {
+       location.reload(); // إعادة تحميل الصفحة لتطبيق اللغة الجديدة
     });
   
-    // عند تحميل الصفحة، ضبط القيمة المختارة في السليكت بناءً على localStorage
-    window.addEventListener("DOMContentLoaded", () => {
-      const savedLang = JSON.parse(localStorage.getItem("languageSelect")) || "ar";
-      document.getElementById("languageSelect").value = savedLang;
-    });
+   const decimalInput = document.getElementById('DecimalPoint');
+  decimalInput.addEventListener('input',async () => {
+    const value = parseFloat(decimalInput.value);
+    if (value < 0) decimalInput.value = 0;
+    if (value > 5) decimalInput.value = 5;
+    await getSetting();
+  });
   </script>
