--- a/pages/setting.html
+++ b/pages/setting.html
@@ -1,7 +1,8 @@
 <script>
 
-watchAndSaveInputs2Local();
+watchAndSaveInputs2Local("settingPage");
 </script>
+<div id="settingPage">
 <!-- اختيار اللغه -->
 <h2  id="t_266"></h2>
 <select id="languageSelect">
@@ -14,6 +15,8 @@ watchAndSaveInputs2Local();
 <label id="t_602"></label>
 <br><br>
 <input type="number" id="DecimalPoint" min="0" max="5">
+
+</div>
 
 
 <script>
